# MasterThesis

./: README.md
ccrep_modified/: .gitignore  README.md  apptainer.def  requirements.txt
ccrep_modified/core/comp/metric/: bleu_norm.py
ccrep_modified/core/comp/tokenizers/: lower_whitespace_tokenizer.py  white_space_truncate.py
ccrep_modified/core/models/classification/: imp_seqin_classifier.py
ccrep_modified/evaluation/fira_metrics/: Meteor.py  Rouge.py
ccrep_modified/tasks/apca/: apca_aggre_cv_results.py  apca_cv_train_helper.py  apca_evaluate.py
ccrep_modified/tasks/cmg/: cmg_train_from_config.py
ccrep_modified/tasks/jitdp/: jitdp_evaluate.py  jitdp_train_from_config.py
ra_framework/: .gitignore  README.md  encode_data.py  model_run.py  pyproject.toml  runners.py
ra_framework/core/: early_stopper.py  trainer.py
ra_framework/core/evaluation/: evaluator.py
ra_framework/core/evaluation/metrics/: accuracy_metric.py  auc_metric.py  f1_score_metric.py  mcc_metric.py  metric_base.py  precision_metric.py  recall_metric.py
ra_framework/core/models/: binary_classifier_base.py  ra_attention_like_bc.py  ra_average_bc.py  ra_weighted_bc.py  simple_bc.py
ra_framework/core/retrieval_augmented/: db.py
ra_framework/core/retrieval_augmented/retrieval_methods/: cos_sim_retriever.py  euclidean_retriever.py  manhattan_retriever.py  retriever_base.py
ra_framework/readers/: apca_reader.py  code_change_model.py  generic_reader.py  jitdp_reader.py
ra_framework/utils/: encode_data_utils.py  model_run_utils.py  pickle_reader.py  pickle_saver.py  plot_utils.py
(+33 files in other folders)
