[project]
name = "ra-framework"
version = "0.1.0"
description = "Framework that helps to build retrieval augmnented models for code change representation problem."
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.1.2",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.66.5",
    "transformers>=4.52.4",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
